[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "py-parkour"
version = "3.1.0"
description = "A Hybrid Scraper Framework: cookie consent, auto-pagination, temp identities, session bridging, API discovery, stealth fingerprinting, and Turnstile solving."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
  {name = "Zinzied", email = "ziedboughdir@gmail.com"}
]
keywords = ["scraping", "automation", "playwright", "web-scraping", "bot", "cookies", "pagination", "api-discovery", "fingerprint", "stealth", "turnstile", "cloudscraper"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.8.0",
    "beautifulsoup4>=4.11.0"
]

[project.optional-dependencies]
full = [
    "playwright>=1.30.0"
]

[project.urls]
"Homepage" = "https://github.com/zinzied/Py-Parkour"
"Repository" = "https://github.com/zinzied/Py-Parkour"
"Bug Tracker" = "https://github.com/zinzied/Py-Parkour/issues"
"Author" = "https://github.com/zinzied"
